server config for max waits/proc, fix resume race condition by checking current status first